--- a/src/App.css
+++ b/src/App.css
@@ -19,6 +19,18 @@
     background: #555;
 }
 
+.border-bottom-primary {
+    border-bottom: 1px solid #6096B4 !important;
+}
+
+.border-end-primary {
+    border-right: 1px solid #6096B4 !important;
+}
+
+.border-primary {
+    border-bottom: 1px solid #6096B4 !important;
+}
+
 .vh-90 {
     height: 90vh;
 }
@@ -44,13 +56,20 @@
     width: 80%;
 }
 
+.btn-primary {
+    background: #6096B4 !important;
+}
+
+.btn {
+    border: unset !important;
+}
+
 /* list */
 li.list-group-item {
     transition: background .32s ease-in;
 }
 li.list-group-item:hover {
-    background: white !important;
-    color: #212529 !important;
+    background: #262A56 !important;
 }
 
 .convoListImg {
@@ -73,6 +92,10 @@ li.list-group-item:hover {
     box-shadow: .8rem 1.8rem 1rem rgba(0,0,0,.65)!important;
 }
 
+.nav-shadow {
+    box-shadow: 0.8rem .8rem 1rem rgba(0,0,0,.65)!important;
+}
+
 .text-logo-container {
     height: 150px;
 }
@@ -91,8 +114,8 @@ li.list-group-item:hover {
 }
 
 .form-control {
-    width: 350px !important;
-    margin: 0 auto;
+    width: 100% !important;
+    height: 100% !important;
 }
 
 .nomember {
@@ -104,13 +127,13 @@ li.list-group-item:hover {
 
 .nomember a {
   text-decoration: none;
-  color: rgb(158, 163, 240);
+  color: #6096B4;
 }
 
 .forgot a {
   text-decoration: none;
   font-size: 14px;
-  color: rgb(158, 163, 240);
+  color: #6096B4;
 }
 
 
@@ -122,76 +145,75 @@ li.list-group-item:hover {
     height: 8%;
 }
 
+
 .chat-message-container {
     height: 80%;
+    position: relative;
 }
 
 .chat-submit-container {
     height: 12%;
 }
 
+/* chat body */
+
 .chat-message-wrapper {
-    display: flex;
-    flex-direction: column;
+    display:flex;
+    width: 100%;
+    margin-bottom: 1rem;
+
 }
 
-/* message from (user) */
-.message_from .chatters-info-container {
+.chatters-info-container {
+    width: 10%;
+}
+
+.chatters-info-container .chatters-img {
     display: flex;
+    justify-content: center;
+}
+
+.chatters-message-container {
+    width: 50%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.chatters-message-container span {
+    margin-top: 10px;
+}
+
+
+.chatters-message-wrapper {
+    padding: 1rem;
+    
+}
+
+.chatters-message-wrapper p {
+    margin: 0;
+}
+
+.chat-message-wrapper.reply {
+    flex-direction: row;
+    
+}
+
+.chat-message-wrapper.sender {
     flex-direction: row-reverse;
 }
 
-.message_from .chatters-img {
-    width: 5%;
-    padding:5px;
-    display: flex;
-    justify-content: center;
-}
-
-.message_from .chatters-img img {
-    width: 50px;
-}
-
-.message_from .chatters-info {
-    text-align: end;
-    width: 95%;
-    padding: 5px;
-}
-
-.message_from .chatters-message-container {
-    text-align: end;
-    padding-right: 5%;
-    font-size: 1.5rem;
-}
-
-/* message to (other user) */
-
-
-.message_to .chatters-info-container {
-    display: flex;
-    flex-direction: row;
-}
-
-.message_to .chatters-img {
-    width: 5%;
-    padding:5px;
-    display: flex;
-    justify-content: center;
-}
-
-.message_to .chatters-img img {
-    width: 50px;
-}
-
-.message_to .chatters-info {
+.sender .chatters-message-wrapper p{
     text-align: start;
-    width: 95%;
-    padding: 5px;
 }
 
-.message_to .chatters-message-container {
-    text-align: start;
-    padding-left: 5%;
-    font-size: 1.5rem;
+.reply .chatters-message-wrapper {
+    border-radius: 0px 30px 30px 30px;
+    background: #262A56;
+}
+
+.sender .chatters-message-wrapper {
+    border-radius: 30px 0px 30px 30px;
+    background: #6096B4;
 }
 
