--- a/src/App.css
+++ b/src/App.css
@@ -54,8 +54,16 @@
     width: 20%;
 }
 
+.w-30 {
+    width: 30%;
+}
+
 .w-80 {
     width: 80%;
+}
+
+.w-70 {
+    width: 70%;
 }
 
 .btn-primary {
